<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <EditText
            android:id="@+id/email_login_text"
            android:inputType="textEmailAddress"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="172dp"
            android:hint="@string/enter_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/pass_login_text"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pass_login_text"
            android:inputType="textPassword"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/email_login_text" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_login_text" />

        <TextView
            android:id="@+id/reset_pass"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_pass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>