<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

       >


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="166dp"
            android:layout_height="162dp"
            android:background="@drawable/pfp"
            app:layout_constraintBottom_toTopOf="@+id/image_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/image_url"
            android:layout_width="168dp"
            android:layout_height="39dp"
            android:hint="@string/enter_url"
            app:layout_constraintBottom_toTopOf="@id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915" />

        <Button
            android:id="@+id/image_button"
            android:layout_width="168dp"
            android:layout_height="39dp"
            android:text="@string/upload_image"
            app:layout_constraintBottom_toTopOf="@id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915" />

        <EditText
            android:id="@+id/full_name"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:hint="@string/enter_name"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/email_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:hint="@string/enter_email_create"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/pass_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.723" />

        <EditText
            android:id="@+id/pass_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="272dp"
            android:hint="@string/enter_password_create"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/passmatch_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.773" />

        <EditText
            android:id="@+id/passmatch_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="332dp"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:hint="@string/repeat_password_create"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/skill_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/pass_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />

        <EditText
            android:id="@+id/skill_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:ems="10"
            android:hint="@string/enter_skills_space_with"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/passmatch_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skill_text" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>