<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        >

        <ImageView
            android:id="@+id/image_update"
            android:layout_width="166dp"
            android:layout_height="162dp"
            android:background="@drawable/pfp"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            app:layout_constraintBottom_toTopOf="@+id/image_button_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/image_url_update"
            android:layout_width="168dp"
            android:layout_height="39dp"
            android:hint="@string/enter_url"
            app:layout_constraintBottom_toTopOf="@id/full_name_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

        <Button
            android:id="@+id/image_button_update"
            android:layout_width="168dp"
            android:layout_height="39dp"
            android:text="@string/upload_image"
            app:layout_constraintBottom_toTopOf="@id/full_name_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />


        <TextView
            android:id="@+id/full_name_view"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:hint="@string/enter_name"
            app:layout_constraintBottom_toTopOf="@+id/email_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66" />

        <TextView
            android:id="@+id/email_confirm"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:text="email"
            app:layout_constraintBottom_toTopOf="@+id/skill_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.826" />

        <EditText
            android:id="@+id/skill_update"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="352dp"
            android:ems="10"
            android:hint="@string/enter_skills"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/update_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skill_update" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>