<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Android Application Development"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project_status_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_title" />

    <TextView
        android:id="@+id/project_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Pending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/project_manager_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_status" />

    <TextView
        android:id="@+id/project_manager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Paul McCartney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project_teamMembers_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_manager" />

    <TextView
        android:id="@+id/project_team_members1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Jake A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/project_team_members2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="James B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_team_members1" />

    <TextView
        android:id="@+id/project_team_members3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Javier C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_team_members2" />

    <TextView
        android:id="@+id/textView5"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/project_deadline_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_team_members3" />

    <TextView
        android:id="@+id/project_deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="05 05 1995"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project_tasks_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_deadline" />

    <CheckBox
        android:id="@+id/project_task1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Signing View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/project_task2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Projects List View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_task1" />

    <CheckBox
        android:id="@+id/project_task3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Manager Dashboard (List of Tasks)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_task2" />


    <TextView
        android:id="@+id/task1_deadline_textView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="05 05 1995"
        app:layout_constraintBottom_toTopOf="@+id/project_task2"
        app:layout_constraintEnd_toEndOf="@+id/project_task1"
        app:layout_constraintTop_toTopOf="@+id/project_task1" />

    <TextView
        android:id="@+id/task2_deadline_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="05 05 1995"
        app:layout_constraintBottom_toTopOf="@+id/project_task3"
        app:layout_constraintEnd_toEndOf="@+id/project_task2"
        app:layout_constraintTop_toTopOf="@+id/project_task2" />

    <TextView
        android:id="@+id/task3_deadline_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="05 05 1995"
        app:layout_constraintBottom_toBottomOf="@+id/project_task3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/project_task3" />

    <Button
        android:id="@+id/submit_completed_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_task3"
        android:text="Submit Tasks"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/submit_completed_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

